fix(home): increase spacing between TikTok and CapCut logos

--- a/src/components/home-comps/showcase/index.module.less
+++ b/src/components/home-comps/showcase/index.module.less
@@ -81,7 +81,7 @@
     width: auto;
     position: relative;
     top: 0.06em;
-    margin-left: 0.1em;
+    margin-left: 0.35em;
   }
 
   .logo-and {
